tests/ui/feature-gates/feature-gate-crablangc-allow-const-fn-unstable.stderr
error[E0658]: crablangc_allow_const_fn_unstable side-steps feature gating and stability checks
  --> $DIR/feature-gate-crablangc-allow-const-fn-unstable.rs:3:1
   |
LL | #[crablangc_allow_const_fn_unstable()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69399 <https://github.com/crablang/crablang/issues/69399> for more information
   = help: add `#![feature(crablangc_allow_const_fn_unstable)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
