tests/ui/feature-gates/feature-gate-crablangc-allow-const-fn-unstable.rs
#![allow(unused_macros)]

#[crablangc_allow_const_fn_unstable()] //~ ERROR crablangc_allow_const_fn_unstable side-steps
const fn foo() { }

fn main() {}
